sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/MissingElseIfAndElse.sand
pub class MissingElseIfAndElse {
    foo() {
        let a = if cond {
            b
        };
    }
}